--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "33127df7-928d-4f44-b053-22e18a0be1d8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
